syntax = "proto3";
package schema;

message IndexSlice {
  repeated bytes IDIndexes = 1;
}