syntax = "proto3";
package schema;

import "google/protobuf/timestamp.proto";

message Meta {
  google.protobuf.Timestamp createdOn = 1;
  google.protobuf.Timestamp lastUpdate = 2;
  bool deleted = 3;
}

message Payload {
  Meta meta = 1;
  // values of the payload the key will be the param index name.
  map<uint64, bytes> values = 2;
}

message PayloadDouble {
  double Value = 1;
}

message PayloadFloat {
  float Value = 1;
}

message PayloadInt64 {
  int64 Value = 1;
}

message PayloadSint64 {
  sint64 Value = 1;
}

message PayloadUint64 {
  uint64 Value = 1;
}

message PayloadBool {
  bool Value = 1;
}

message PayloadString {
  string Value = 1;
}

message PayloadBytes {
  bytes Value = 1;
}

message PayloadDoubleArr {
  repeated double Value = 1;
}

message PayloadFloatArr {
  repeated float Value = 1;
}

message PayloadInt64Arr {
  repeated int64 Value = 1;
}

message PayloadSint64Arr {
  repeated sint64 Value = 1;
}

message PayloadUint64Arr {
  repeated uint64 Value = 1;
}

message PayloadBoolArr {
  repeated bool Value = 1;
}

message PayloadStringArr {
  repeated string Value = 1;
}

message PayloadBytesArr {
  repeated bytes Value = 1;
}